@@ -29,19 +29,20 @@ static int dumper_thread(void *arg) {
 
 // FrameExporter
 
-FrameExporter::FrameExporter()
-    : surface(NULL), pixels(NULL), rowstride(0) {
+FrameExporter::FrameExporter() {
 
     //this now assumes the display is setup
     //before the frame exporter is created
     //(which seems reasonable)
-    surface = SDL_GetVideoSurface();
 
-    rowstride     = surface->w * 3;
-    surfacepixels = new char[(surface->h) * rowstride];
-    pixels        = new char[(surface->h) * rowstride];
+    rowstride     = display.width * 3;
 
-    screentex = display.emptyTexture(display.width, display.height);
+    pixels1 = new char[display.height * rowstride];
+    pixels2 = new char[display.height * rowstride];
+
+    pixels_shared_ptr = 0;
+
+    screentex = display.emptyTexture(display.width, display.height, GL_RGBA);
 
     cond   = SDL_CreateCond();
     mutex  = SDL_CreateMutex();
@@ -64,65 +65,45 @@ FrameExporter::~FrameExporter() {
     SDL_DestroyCond(cond);
     SDL_DestroyMutex(mutex);
 
-    delete[] surfacepixels;
-    delete[] pixels;
+    if(screentex!=0) glDeleteTextures(1, &screentex);
+
+    pixels_shared_ptr = 0;
+
+    delete[] pixels1;
+    delete[] pixels2;
 }
 
 void FrameExporter::dump() {
-
-    //render view to texture
-    display.renderToTexture(screentex, display.width, display.height, GL_RGBA);
-
-    //draw view texture flipped
-
-    glBegin(GL_QUADS);
-        glTexCoord2f(0.0f,0.0f);
-        glVertex2f(0, 0);
-
-        glTexCoord2f(1.0f,0.0f);
-        glVertex2i(display.width, 0);
-
-        glTexCoord2f(1.0f,1.0f);
-        glVertex2i(display.width, display.height);
-
-        glTexCoord2f(0.0f,1.0f);
-        glVertex2i(0, display.height);
-    glEnd();
-
-    // wait for lock
-
-    SDL_mutexP(mutex);
 
     display.mode2D();
 
     glEnable(GL_TEXTURE_2D);
     glDisable(GL_BLEND);
 
-    // draw pixels (already flipped so we dont have to invert them)
+    //render view to texture
+    display.renderToTexture(screentex, display.width, display.height, GL_RGBA);
 
-    glReadPixels(0, 0, surface->w, surface->h,
-        GL_RGB, GL_UNSIGNED_BYTE, surfacepixels);
+    //draw view screen flipped
+    display.fullScreenQuad(true);
 
-    dumper_thread_state = FRAME_EXPORTER_DUMP;
+    char* next_pixel_ptr = (pixels_shared_ptr == pixels1) ? pixels2 : pixels1;
+
+    // copy pixels - now the right way up
+    glReadPixels(0, 0, display.width, display.height,
+        GL_RGB, GL_UNSIGNED_BYTE, next_pixel_ptr);
+
+    // wait for lock before changing the pointer to point to our new buffer
+    SDL_mutexP(mutex);
+
+        //flip buffer we are pointing at
+        pixels_shared_ptr = next_pixel_ptr;
+        dumper_thread_state = FRAME_EXPORTER_DUMP;
 
     SDL_CondSignal(cond);
     SDL_mutexV(mutex);
 
-    // redraw view the right way up
-
-    glBegin(GL_QUADS);
-        glTexCoord2f(0.0f,1.0f);
-        glVertex2f(0, 0);
-
-        glTexCoord2f(1.0f,1.0f);
-        glVertex2i(display.width, 0);
-
-        glTexCoord2f(1.0f,0.0f);
-        glVertex2i(display.width, display.height);
-
-        glTexCoord2f(0.0f,0.0f);
-        glVertex2i(0, display.height);
-    glEnd();
+    // redraw view the right way up for the user
+    display.fullScreenQuad(false);
 
 }
 
@@ -136,19 +117,13 @@ void FrameExporter::dumpThr() {
 
         if (dumper_thread_state == FRAME_EXPORTER_EXIT) break;
 
-        //invert
-//         for(int y=0;y<surface->h;y++) {
-//             for(int x=0;x<rowstride;x++) {
-//                 pixels[x + y * rowstride] = surfacepixels[x + (surface->h - y - 1) *rowstride];
-//             }
-//         }
-
         dumpImpl();
 
         dumper_thread_state = FRAME_EXPORTER_WAIT;
     }
 
     SDL_mutexV(mutex);
+
 }
 
 // PPMExporter
@@ -163,14 +138,14 @@ PPMExporter::PPMExporter(std::string outputfile) {
         output   = new std::fstream(outputfile.c_str(), std::ios::out | std::ios::binary);
 
         if(output->fail()) {
-            printf("Failed to open '%s' for writing\n", outputfile.c_str());
+            fprintf(stderr, "Failed to open '%s' for writing\n", outputfile.c_str());
             exit(1);
         }
     }
 
     //write header
     sprintf(ppmheader, "P6\n# Generated by Gource\n%d %d\n255\n",
-        surface->w, surface->h
+        display.width, display.height
     );
 
 	dumper_thread_state = FRAME_EXPORTER_WAIT;
@@ -179,16 +154,19 @@ PPMExporter::PPMExporter(std::string outputfile) {
 PPMExporter::~PPMExporter() {
     SDL_mutexP(mutex);
 
-    dumper_thread_state = FRAME_EXPORTER_EXIT;
+        dumper_thread_state = FRAME_EXPORTER_EXIT;
 
-    SDL_CondSignal(cond);
-    SDL_mutexV(mutex);
+        SDL_CondSignal(cond);
+        SDL_mutexV(mutex);
 
     if(filename.size()>0)
         ((std::fstream*)output)->close();
 }
 
 void PPMExporter::dumpImpl() {
+    if(pixels_shared_ptr==0) return;
+
     *output << ppmheader;
-    output->write(pixels, rowstride * surface->h);
+
+    output->write(pixels_shared_ptr, rowstride * display.height);
 }
