@@ -22,6 +22,7 @@
 #include <fstream>
 #include <ostream>
 
+
 #include "SDL_thread.h"
 
 #include "core/display.h"
@@ -32,8 +33,11 @@ enum { FRAME_EXPORTER_WAIT,
 
 class FrameExporter {
 protected:
-    SDL_Surface *surface;
-    char *surfacepixels, *pixels;
+
+    char* pixels1;
+    char* pixels2;
+    char* pixels_shared_ptr;
+
     size_t rowstride;
 
     GLuint screentex;
